samples/_failures_safe/1761224258_f37eb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9f9a56f.c: In function ‘main’:
./samples/SAFE/__tmp_d9f9a56f.c:144:12: error: missing terminating " character
  144 |     printf("\nMatrix addition:\n
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d9f9a56f.c:144:5: error: expected expression at end of input
  144 |     printf("\nMatrix addition:\n
      |     ^~~~~~
./samples/SAFE/__tmp_d9f9a56f.c:144:5: error: expected declaration or statement at end of input
